[package]
name = "tortuga"
description = "A Rust-based CGI-specific HTTP web server."
version = "0.6.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga"
documentation = "https://docs.rs/tortuga"

[profile.release]
lto = true
debug = true

[dependencies]
clap = { version = "4", features = ["derive"] }
httparse = "1.8.0"
mio = { version = "0.8.10", features = ["net"] }
