[package]
name = "tortuga"
description = "A Rust-based CGI-specific HTTP web server."
version = "0.6.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga"
documentation = "https://docs.rs/tortuga"

[profile.release]
lto = true
debug = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
hyper = { version = "1", features = ["server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
httparse = "1.8.0"
