workspace = { members = ["examples/echo"] }
[package]
name = "tortuga"
description = "A Rust-based CGI-specific HTTP web server."
version = "0.7.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga"
documentation = "https://docs.rs/tortuga"

[profile.release]
lto = true
debug = true

[features]
default = []

[dev-dependencies]
criterion = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }

[[bench]]
name = "assert_cgi"
harness = false

[[bench]]
name = "cgi"
harness = false

[[bench]]
name = "cached_wcgi"
harness = false

[[bench]]
name = "uncached_wcgi"
harness = false

[dependencies]
bytes = "1.5.0"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
http = "1.0.0"
http-body-util = "0.1.0"
httparse = "1.8.0"
hyper = { version = "1.1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
sha3 = "0.10.8"
tokio = { version = "1.35.1", features = ["fs", "macros", "net", "process"] }
tokio-util = "0.7.10"
wasmtime = "16.0.0"
wasmtime-wasi = "16.0.0"
wasi-common = "16.0.0"
