[package]
name = "tortuga"
description = "Compiler and runtime for the Tortuga programming language."
version = "0.5.5"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga"
documentation = "https://docs.rs/tortuga"

[profile.release]
lto = true
debug = true

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
test-log = { version = "0.2.8", features = ["trace"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.6", features = ["criterion", "flamegraph", "protobuf"] }

[dependencies]
clap = { version = "3.2", features = ["derive"] }
colored = { version = "2.0.0" }
lazy_static = "1.4"
log = "0.4"
mimalloc = { version = "0.1.27" }
rustyline = { version = "10" }
regex = "1"
thiserror = "1.0"
tortuga-compiler = { path = "../compiler" }
tortuga-executable = { path = "../executable" }
tortuga-vm = { path = "../vm" }
tracing = "0.1"
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[[bench]]
name = "fibonacci"
harness = false