[package]
name = "tortuga"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tortuga"
repository = "https://github.com/misalcedo/tortuga"

[profile.release]
lto = true
debug = true

[dependencies]
