[package]
name = "tortuga-guest"
description = "Compiler and runtime for the Tortuga programming language."
version = "0.1.1"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga-guest"
documentation = "https://docs.rs/tortuga-guest"

[features]
default = ["memory"]
memory = []