[package]
name = "tortuga-host"
description = "Compiler and runtime for the Tortuga programming language."
version = "0.1.1"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga"
documentation = "https://docs.rs/tortuga"

[dev-dependencies]
echo = { path = "examples/echo", artifact = "bin", target = "wasm32-unknown-unknown" }
infinite = { path = "examples/infinite", artifact = "bin", target = "wasm32-unknown-unknown" }
ping = { path = "examples/ping", artifact = "bin", target = "wasm32-unknown-unknown" }
pong = { path = "examples/pong", artifact = "bin", target = "wasm32-unknown-unknown" }
static = { path = "examples/static", artifact = "bin", target = "wasm32-unknown-unknown" }

[dependencies]
async-trait = "0.1.64"
tokio = { version = "1.28.0", features = ["full"] }
tortuga-guest = { version = "0.1.1", path = "../guest" }
uuid = { version = "1.3.2", features = ["v4", "v5"] }
wasmtime = "8.0.1"
wasmtime-wasi = "8.0.1"

[features]
default = ["channel", "memory"]
channel = []
memory = []
