[package]
name = "tortuga-host"
description = "Compiler and runtime for the Tortuga programming language."
version = "0.1.1"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tortuga.salcedo.cc"
repository = "https://github.com/misalcedo/tortuga"
documentation = "https://docs.rs/tortuga"

[dev-dependencies]
echo = { path = "examples/echo", artifact = "bin", target = "wasm32-unknown-unknown" }
infinite = { path = "examples/infinite", artifact = "bin", target = "wasm32-unknown-unknown" }
ping = { path = "examples/ping", artifact = "bin", target = "wasm32-unknown-unknown" }
pong = { path = "examples/pong", artifact = "bin", target = "wasm32-unknown-unknown" }
static = { path = "examples/static", artifact = "bin", target = "wasm32-unknown-unknown" }
wasi = { path = "examples/wasi", artifact = "bin", target = "wasm32-wasi" }

[dependencies]
async-trait = "0.1.71"
bytes = "1.4"
tokio = { version = "1.29", features = ["full"] }
tortuga-guest = { version = "0.1.1", path = "../guest" }
tortuga-model = { version = "0.1.0", path = "../model" }
uuid = { version = "1.4", features = ["v4", "v5"] }
wasmtime = "10.0"
wasmtime-wasi = "10.0"
wasi-common = "10.0"

[features]
default = ["channel", "memory"]
channel = []
memory = []
